--- a/css/css.css
+++ b/css/css.css
@@ -104,3 +104,5 @@ background: linear-gradient(to right, rgba(35,168,251,1) 0%, rgba(14,137,232,1) 
 	font-size: 10px;
 	color: #fff;
 }
+fieldset{margin-top:8%;}
+fieldset .sml-txt{font-size:70%;color:#333;}
