New Features completed.  Selective output.  Asteroids Table.  Selective output will save a cookie

--- a/css/css.css
+++ b/css/css.css
@@ -35,6 +35,9 @@ body.hasJS #status.online {background: #0c0;}
 .cell-sci.sci-zero{font-size:199%;color:#000000;line-height:1;}
 .cell-sci.sci-grey{background-color:#666;}
 
+.biome-header,
+.rail-header,
+.body-header,
 .sci-header{
 background-color:#ffffff;
 /*
@@ -104,4 +107,14 @@ background: linear-gradient(to right, rgba(35,168,251,1) 0%, rgba(14,137,232,1) 
 .file-browse *{
 	font-size: 10px;
 	color: #fff;
+}
+fieldset{margin-top:8%;}
+fieldset .sml-txt{font-size:70%;color:#333;}
+.biome-header{min-width:12px;line-height:1;}
+.biome-header div.rotator{
+	-ms-writing-mode: tb-lr;
+	-webkit-writing-mode: vertical-lr;
+	-moz-writing-mode: vertical-lr;
+	-ms-writing-mode: vertical-lr;
+	writing-mode: vertical-lr;
 }
