--- a/css/css.css
+++ b/css/css.css
@@ -118,3 +118,4 @@ fieldset .sml-txt{font-size:70%;color:#333;}
 	-ms-writing-mode: vertical-lr;
 	writing-mode: vertical-lr;
 }
+textarea{overflow:auto;width:100%;height:100%;}
